Fix facet toggle button spacing

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -466,6 +466,7 @@ div[id*='facet-panel-'] {
 }
 
 .facets-toggle {
+  margin-top: -6px;
   background-color: white;
   .icon-bar {
     background-color: #888888;
